--- a/fixtures/vcr_cassettes/sciencewire_harvester_adds_new_contributions.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_adds_new_contributions.yml
@@ -37,7 +37,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Fri, 27 Sep 2013 22:47:39 GMT
+      - Tue, 19 Nov 2013 00:20:38 GMT
       Content-Length:
       - '6476'
     body:
@@ -109,7 +109,7 @@ http_interactions:
         artificial|intubation|neonatology|ventilation, high-frequency</KeywordList>\r\n
         \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
         Document</DocumentCategory>\r\n    <NumberOfReferences>27</NumberOfReferences>\r\n
-        \   <TimesCited>11</TimesCited>\r\n    <TimesNotSelfCited>8</TimesNotSelfCited>\r\n
+        \   <TimesCited>12</TimesCited>\r\n    <TimesNotSelfCited>8</TimesNotSelfCited>\r\n
         \   <PMID>1914489</PMID>\r\n    <WoSItemID>A1991GK39000014</WoSItemID>\r\n
         \   <PublicationSourceTitle>CRITICAL CARE MEDICINE</PublicationSourceTitle>\r\n
         \   <Volume>19</Volume>\r\n    <Issue>10</Issue>\r\n    <Pagination>1310-1322</Pagination>\r\n
@@ -123,7 +123,7 @@ http_interactions:
         \   <CopyrightPublisher>LIPPINCOTT WILLIAMS &amp; WILKINS</CopyrightPublisher>\r\n
         \   <CopyrightCity>PHILADELPHIA</CopyrightCity>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Fri, 27 Sep 2013 22:47:40 GMT
+  recorded_at: Tue, 19 Nov 2013 00:20:39 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -141,7 +141,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 27 Sep 2013 22:47:39 GMT
+      - Tue, 19 Nov 2013 00:20:40 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -149,12 +149,14 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 9DFD7AC42460B0B1_0070SID
+      - 08DD45A028AAED81_0049SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=9DFD7AC42460B0B1_0070SID; domain=.nih.gov; path=/; expires=Sat, 27
-        Sep 2014 22:47:39 GMT
+      - ncbi_sid=08DD45A028AAED81_0049SID; domain=.nih.gov; path=/; expires=Wed, 19
+        Nov 2014 00:20:40 GMT
+      X-Ua-Compatible:
+      - IE=Edge
       Transfer-Encoding:
       - chunked
     body:
@@ -332,5 +334,5 @@ http_interactions:
         \       <ArticleIdList>\n            <ArticleId IdType=\"pubmed\">1914489</ArticleId>\n
         \       </ArticleIdList>\n    </PubmedData>\n</PubmedArticle>\n\n</PubmedArticleSet>\n"
     http_version: 
-  recorded_at: Fri, 27 Sep 2013 22:47:40 GMT
+  recorded_at: Tue, 19 Nov 2013 00:20:40 GMT
 recorded_with: VCR 2.5.0
