--- a/fixtures/vcr_cassettes/sciencewire_harvester_update_pubmed_with_sw_data.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_update_pubmed_with_sw_data.yml
@@ -37,7 +37,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Fri, 27 Sep 2013 22:47:35 GMT
+      - Tue, 19 Nov 2013 00:20:36 GMT
       Content-Length:
       - '2075'
     body:
@@ -68,7 +68,7 @@ http_interactions:
         />\r\n    <NewPublicationItemID>42711845</NewPublicationItemID>\r\n    <IsObsolete>false</IsObsolete>\r\n
         \   <CopyrightPublisher />\r\n    <CopyrightCity />\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Fri, 27 Sep 2013 22:47:36 GMT
+  recorded_at: Tue, 19 Nov 2013 00:20:37 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -86,7 +86,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 27 Sep 2013 22:47:35 GMT
+      - Tue, 19 Nov 2013 00:20:37 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -94,12 +94,14 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DD69A62460B071_0116SID
+      - 9DFC12D628AAED51_0182SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DD69A62460B071_0116SID; domain=.nih.gov; path=/; expires=Sat, 27
-        Sep 2014 22:47:35 GMT
+      - ncbi_sid=9DFC12D628AAED51_0182SID; domain=.nih.gov; path=/; expires=Wed, 19
+        Nov 2014 00:20:37 GMT
+      X-Ua-Compatible:
+      - IE=Edge
       Transfer-Encoding:
       - chunked
     body:
@@ -176,7 +178,7 @@ http_interactions:
         \       <ArticleIdList>\n            <ArticleId IdType=\"pubmed\">10048354</ArticleId>\n
         \       </ArticleIdList>\n    </PubmedData>\n</PubmedArticle>\n\n</PubmedArticleSet>\n"
     http_version: 
-  recorded_at: Fri, 27 Sep 2013 22:47:36 GMT
+  recorded_at: Tue, 19 Nov 2013 00:20:38 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -194,7 +196,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Fri, 27 Sep 2013 22:47:36 GMT
+      - Tue, 19 Nov 2013 00:20:38 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -202,12 +204,14 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 9DFC363F2460B081_0118SID
+      - 08DD60C928AAED61_0158SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=9DFC363F2460B081_0118SID; domain=.nih.gov; path=/; expires=Sat, 27
-        Sep 2014 22:47:36 GMT
+      - ncbi_sid=08DD60C928AAED61_0158SID; domain=.nih.gov; path=/; expires=Wed, 19
+        Nov 2014 00:20:38 GMT
+      X-Ua-Compatible:
+      - IE=Edge
       Connection:
       - close
       Transfer-Encoding:
@@ -217,5 +221,5 @@ http_interactions:
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Fri, 27 Sep 2013 22:47:36 GMT
+  recorded_at: Tue, 19 Nov 2013 00:20:38 GMT
 recorded_with: VCR 2.5.0
