--- a/fixtures/vcr_cassettes/sciencewire_harvester_wos_no_pubmed.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_wos_no_pubmed.yml
@@ -48,7 +48,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Fri, 27 Sep 2013 22:47:43 GMT
+      - Tue, 19 Nov 2013 00:20:48 GMT
       Content-Length:
       - '277'
     body:
@@ -57,7 +57,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>82248</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Fri, 27 Sep 2013 22:47:44 GMT
+  recorded_at: Tue, 19 Nov 2013 00:20:49 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/82248?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -95,7 +95,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Fri, 27 Sep 2013 22:47:44 GMT
+      - Tue, 19 Nov 2013 00:20:49 GMT
       Content-Length:
       - '3566'
     body:
@@ -140,7 +140,7 @@ http_interactions:
         \   <AuthorCitationCountList>1,0,5|2,0,5</AuthorCitationCountList>\r\n    <CopyrightStateProvince>NJ</CopyrightStateProvince>\r\n
         \   <CopyrightCountry>UNITED STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Fri, 27 Sep 2013 22:47:45 GMT
+  recorded_at: Tue, 19 Nov 2013 00:20:50 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -158,7 +158,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Fri, 27 Sep 2013 22:47:44 GMT
+      - Tue, 19 Nov 2013 00:20:49 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -166,12 +166,14 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 9DFC74AE2460B101_0225SID
+      - 9DFC7D6F28AAEE11_0128SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=9DFC74AE2460B101_0225SID; domain=.nih.gov; path=/; expires=Sat, 27
-        Sep 2014 22:47:44 GMT
+      - ncbi_sid=9DFC7D6F28AAEE11_0128SID; domain=.nih.gov; path=/; expires=Wed, 19
+        Nov 2014 00:20:49 GMT
+      X-Ua-Compatible:
+      - IE=Edge
       Connection:
       - close
       Transfer-Encoding:
@@ -181,5 +183,5 @@ http_interactions:
       string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Fri, 27 Sep 2013 22:47:45 GMT
+  recorded_at: Tue, 19 Nov 2013 00:20:50 GMT
 recorded_with: VCR 2.5.0
